# latrace

./: .gitignore  ChangeLog  Makefile  README  ReleaseNotes  TODO  configure.ac
debian/: changelog  conffiles  control  copyright  rules
doc/: Makefile  asciidoc.conf.in  latrace.txt
etc/: latrace.conf  latrace.conf.in
etc/latrace.d/: arch-x86_64.conf  dlfcn.conf  getopt.conf  latrace.conf.in  libintl.conf  locale.conf  misc.conf  ncurses.conf  netdb.conf  pthread.conf  pwd.conf  resource.conf  socket.conf  string.conf  syslog.conf  term.conf  typedefs.conf  unistd.conf  wait.conf
etc/latrace.d/headers/: ctype.h  dirent.h  fcntl.h  inet.h  ioctl.h  latrace.h  libio.h  mman.h  ncurses.h  signal.h  socket.h  stat.h  stdio.h  stdlib.h  string.h  termios.h  time.h  utmp.h
etc/latrace.d/headers/sysdeps/x86_64/: latrace.h  syscall.h
etc/sysdeps/x86_64/: latrace.conf
package/debian/: changelog  conffiles  control  copyright  rules
package/rpm/: latrace.spec
src/: Makefile  args-bison.y  args-flex.l  args.c  args.h  audit-init.c  audit.c  audit.h  autoconf.h.in  autoconf.make.in  config-bison.y  config-flex.l  config.c  config.h  ctl.c  fifo.c  latrace.c  lib-include.c  lib-include.h  list.h  objsearch.c  output.c  run.c  stack.c  stats.c  symbol.c  thread.c  tty.c
src/sysdeps/arm/: stack.c
src/sysdeps/i686/: stack.c  stack.h
src/sysdeps/x86_64/: args.h  stack.c  stack.h
test/: Makefile  lib-test-args.c  lib-test-args.conf  lib-test-args.h  lib-test-common.c  lib-test-libsym1.c  lib-test-libsym2.c  lib-test-libsym3.c  test-args-long-32.c  test-args-long-64.c  test-args.c  test-args.h  test-common.c  test-kill.c  test-lib.c  test-lib.h  test-libsym.c  test.sh  test1.c
test/script/: functions.sh  test_args.sh  test_common.sh  test_kill.sh  test_libsym.sh  test_tty_output.sh
test/sysdeps/i686/: test-args.c
test/sysdeps/x86_64/: test-args.c
